@@ -1,3 +1,4 @@
+	* support SSL over uTP connections
 	* support web seeds that resolve to multiple IPs
 	* added auto-sequential feature. download well-seeded torrents in-order
 	* removed built-in GeoIP support (this functionality is orthogonal to libtorrent)
